objects/bofc__BOFCFieldsAnalyzerPicklistResult__c.object
<CustomObject>
    <fields>
        <fullName>bofc__BOFCFieldsAnalyzerResult__c</fullName>
        <label>BOFCFieldsAnalyzerResult</label>
        <referenceTo>bofc__BOFCFieldsAnalyzerResult__c</referenceTo>
        <relationshipLabel>BOFCFieldsAnalyzerPicklistResult</relationshipLabel>
        <relationshipName>BOFCFieldsAnalyzerPicklistResult</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>bofc__BOFCFieldsAnalyzer__c</fullName>
        <formula>CASESAFEID(bofc__BOFCFieldsAnalyzerResult__r.bofc__BOFCFieldsAnalyzer__r.Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BOFCFieldsAnalyzer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bofc__Field_Name__c</fullName>
        <formula>bofc__BOFCFieldsAnalyzerResult__r.bofc__Field_Analyzer_Result_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Field Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bofc__Parent_Field_Type__c</fullName>
        <formula>Text(bofc__BOFCFieldsAnalyzerResult__r.bofc__Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Field Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bofc__Picklist_Value_Name__c</fullName>
        <label>Picklist Value Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bofc__Populated_On_Percent__c</fullName>
        <formula>VALUE(
IF( bofc__BOFCFieldsAnalyzerResult__r.bofc__BOFCFieldsAnalyzer__r.bofc__Records__c  = 0, &quot;&quot;, TEXT(bofc__Populated_On__c / bofc__BOFCFieldsAnalyzerResult__r.bofc__BOFCFieldsAnalyzer__r.bofc__Records__c) )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Populated On (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>bofc__Populated_On__c</fullName>
        <label>Populated On</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>BOFCFieldsAnalyzerPicklistResult</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BOFCFieldsAnalyzerPicklistResult</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>